--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
     "export": "next export",
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
     "next": "latest",
+    "next-i18next": "^10.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
